force-app/main/default/objects/ReceivedWaypoint__c/ReceivedWaypoint__c.object-meta.xml
<CustomObject>
    <label>Received Waypoint</label>
    <nameField>
        <label>Route</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Received Waypoints</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>