force-app/main/default/objects/ReceivedWaypoint__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>ReceivedWaypointGroup__c</referenceTo>
    <relationshipLabel>Received Waypoints</relationshipLabel>
    <relationshipName>ReceivedWaypoints</relationshipName>
    <type>Lookup</type>
</CustomField>