force-app/main/default/objects/ReceivedWaypoint__c/fields/MapsRouteId__c.field-meta.xml
<CustomField>
    <fullName>MapsRouteId__c</fullName>
    <label>Maps RouteId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>