force-app/main/default/objects/ReceivedWaypoint__c/fields/MapsWaypointId__c.field-meta.xml
<CustomField>
    <fullName>MapsWaypointId__c</fullName>
    <label>Maps WaypointId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>