force-app/main/default/objects/ReceivedWaypoint__c/fields/SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber__c</fullName>
    <label>Sequence Number</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>