force-app/main/default/objects/ReceivedWaypoint__c/validationRules/RequireOrderOnCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireOrderOnCreation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), ISBLANK(Order__c))</errorConditionFormula>
    <errorDisplayField>Order__c</errorDisplayField>
    <errorMessage>Order is mandatory for creating Received Waypoint.</errorMessage>
</ValidationRule>