force-app/main/default/objects/ReceivedWaypoint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>SequenceNumber__c</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <columns>Group__c</columns>
    <columns>MapsRouteId__c</columns>
    <columns>MapsWaypointId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>